@@ -533,6 +533,7 @@ specflg6.test	\
 specflg7.test	\
 specflg8.test	\
 specflg9.test	\
+specflg10.test	\
 spell.test \
 spell2.test \
 spell3.test \
