@@ -1,5 +1,16 @@
 2008-11-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Choose default source extension: AM_DEFAULT_SOURCE_EXT.
+	* automake.in (handle_source_transform): Accept unconditional
+	literal extension in AM_DEFAULT_SOURCE_EXT as override for the
+	default source extension `.c'.  If set, ignore the old default
+	source rule for libtool libraries.
+	* doc/automake.texi (Default _SOURCES): Document this.
+	* NEWS: Update.
+	* tests/specflg10.test: New test.
+	* tests/Makefile.am: Update.
+	Suggestion by Akim Demaille.
+
 	Fix maintainer-check failure.
 	* tests/parallel-am.test: Rename variable to not match pattern
 	used in maintainer-check.
